Alignment of cards fixed

--- a/src/sections/Omega/Event/styles/Event.module.scss
+++ b/src/sections/Omega/Event/styles/Event.module.scss
@@ -25,7 +25,8 @@
   .cardItem {
     width: 100%;
     display: flex;
-    gap: 30px;
+    gap: 50px;
+    row-gap: 40px;
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin: 2% 4%;
@@ -34,7 +35,7 @@
   .card {
     margin-top: 40px;
     display: flex;
-    width: 500px;
+    width: 550px;
     height: 300px;
     backdrop-filter: blur(10px);
     background: #0b0b0b11;
@@ -138,9 +139,9 @@
   
   .cut2 {
     background-color: #000;
-    width: 50px;
+    width: 55px;
     height: 50px;
-    margin-top: 48%;
+    margin-top: 43%;
     margin-left: 54.7%;
     border-top: solid white 1px;
     position: absolute;
@@ -152,15 +153,15 @@
   @media (max-width: 700px) {
     .cut2 {
       width: 49px;
-      margin-top: 44.5%;
-      right: -6.5%;
+      margin-top: 54%;
+      right: -7.5%;
     }
     .cut{
       margin-top: -14.5px;
     }
   
     .card {
-      width: 400px;
+      width: 335px;
       height: 235px;
     }
   
@@ -192,12 +193,12 @@
 
 @media (max-width:450px){
   .card{
-    width: 280px;
+    width: 330px;
     height: 200px;
   }
   .cut2{
-    margin-top: 52%;
-    right: -9%;
+    margin-top: 44%;
+    // right: -9%;
   }
   .cut{
     margin-top: -20px;
